	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
11/09
	* Official Weight and Max SP values for TK/SG/SL/GS/NJ [Playtester]
	- why were ours so far off the official ones?
11/08
	* Reduced Wand of Hermod's splash range (max distance from a portal) from 3 to
	  2. Should it really be 1? (that is, be so close that moving a single cell
	  warps you?) [Skotlex]
11/07
	* Kiel now summons 6 slaves instead of 5 [Playtester]
11/06
	* Added Bull's Eye 0.5 sec cast time [Skotlex]
	* Ganbantein's delay is now 2 secs. [Skotlex]
	* Removed the time2 value of NJ_NEN since it has no use. [Skotlex]
11/05
	* Raised the chance to get an OPB from an OPB [Playtester]
	* Official NJ/GS job exp for level 51+52 [Playtester]
11/03
	* Official X.4 MVP rewards [Playtester]
	* Official NJ/GS job exp up to joblevel 50 [Playtester]
	* Remaining official X.4 drop updates [Playtester]
	- updated related item names
11/02
	* Official Gunslinger/Ninja weapon drops [Playtester]
	- updated other mob drops A-M
	- updated related item names
	* Official X.4 mob drops [Playtester]
	* Fixed Aliot's Rebirth skill [Playtester]
11/01
	* Reverted LK_Berserk HP requirement [Vicious]
10/30
	* Added some official X.4 drop rates [Playtester]
	* Corrected GS skill ranges using Aegis data. All their targetted skills
	  have a base range of 9, and Dust (Choke) has a range of 2. [Skotlex]
	* Gave Grounddrift a knockback of 3 for the fire-elemental effect (value
	  totally custom)
	* Set the inf2 to encore skills of Wand of Hermode [Skotlex]
10/29
	* Official NJ/GS exp chart for level 1-48 [Playtester]
	* Added Shinobi Sash to Shinobi drops [Playtester]
	* Fixed const.txt, thanks to flaviojs [Vicious]